fixed overflowing of scoops and isopened

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @import "tailwindcss";
 
 @theme {
+  --breakpoint-xl: 95rem;
   --breakpoint-3xl: 112rem;
 }
 
